--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,24 @@
+name: Test Project CI/CD
 on:
  push:
-   branch: [main]
+   branches: [main]
    
-job:
+jobs:
  build:
   runs-on: ubuntu-latest
-   steps:
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v2.3.4
+      with:
+        # Repository name with owner. For example, actions/checkout
+        repository: ${{ github.repository }}
+    - name: Print Hello World
+      run: |
+       ls -la
+       echo "Hello World"
+        
+
+        
    
     
    
