--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,8 @@ jobs:
         # This is the branch you wish to deploy to, for example gh-pages or docs.
         branch: gh-pages
         # The folder in your repository that you want to deploy. If your build script compiles into a directory named build you would put it here. Folder paths cannot have a leading / or ./. If you wish to deploy the root directory you can place a . here.
-        folder: folds/myfolder 
-        target-folder: .
+        folder: tenny7.github.io/folds/myfolder 
+      
         
         
         
