--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
         token: ${{ github.token }}
-        # This is the branch you wish to deploy to, for example gh-pages or docs.
+        # This is the branch you wish to deploy to, for example gh-pages
         branch: gh-pages
         # The folder in your repository that you want to deploy. If your build script compiles into a directory named build you would put it here. Folder paths cannot have a leading / or ./. If you wish to deploy the root directory you can place a . here.
         folder: tenny7.github.io/folds/myfolder 
